# gmd-omnimenu-1.7

./: CMakeLists.txt  LICENSE  README.md  build.sh
include/: HaxManager.hpp  Module.hpp  RGBColorInputs.hpp  Utils.hpp
include/cocos2d/cocos2dx/: CCDirector.h
include/cocos2d/cocos2dx/cocoa/: CCObject.h
include/cocos2d/cocos2dx/extensions/CCScrollLayer/: CCScrollLayer.h
include/cocos2d/cocos2dx/include/: cocos2d.h
include/cocos2d/cocos2dx/label_nodes/: CCLabelBMFont.h  CCLabelTTF.h
include/cocos2d/cocos2dx/platform/: CCEGLViewProtocol.h
include/cocos2d/cocos2dx/sprite_nodes/: CCSprite.h
include/cocos2d/cocos2dx/text_input_node/: CCTextFieldTTF.h
include/layers/: HaxMenu.hpp  HaxOverlay.hpp
include/robtop/: ButtonSprite.hpp  CCMenuItemSpriteExtra.hpp  CCMenuItemToggler.hpp  CCScrollLayerExt.hpp  CCTextInputNode.hpp  ColorSelectPopup.hpp  DS_Dictionary.hpp  DrawGridLayer.hpp  EditButtonBar.hpp  EditLevelLayer.hpp  EditorPauseLayer.hpp  EditorUI.hpp  EndPortalObject.hpp  FLAlertLayer.hpp  GJGameLevel.hpp  GameLevelManager.hpp  GameManager.hpp  GameObject.hpp  GameSoundManager.hpp  GameStatsManager.hpp  LevelBrowserLayer.hpp  LevelEditorLayer.hpp  LevelInfoLayer.hpp  LevelSelectLayer.hpp  LevelSettingsObject.hpp  LevelTools.hpp  LocalLevelManager.hpp  MenuLayer.hpp  MyLevelsLayer.hpp  PauseLayer.hpp  PlayLayer.hpp  PlayerObject.hpp  ShareCommentLayer.hpp  Slider.hpp  SliderThumb.hpp  SliderTouchLogic.hpp  UILayer.hpp  UndoObject.hpp
resources/: .pih.png-autosave.kra  menupanel-hd.png~
smali/: ClipboardHelper$1.smali  ClipboardHelper.smali  GeometryJump.smali
src/: JniHook.cpp  Utils.cpp  hooks.cpp  main.cc
src/hooks/: CCControlColourPicker.cpp  CCLabelBMFont.cpp  CCLabelTTF.cpp  CCNode.cpp  CCParticleSystem.cpp  CCParticleSystemQuad.cpp  CCScheduler.cpp  CCString.cpp  CCTextInputNode.cpp  CCTransitionFade.cpp  CommentCell.cpp  EditLevelLayer.cpp  EditorPauseLayer.cpp  EditorUI.cpp  EndPortalObject.cpp  GJGameLevel.cpp  GJGarageLayer.cpp  GameManager.cpp  GameObject.cpp  GameSoundManager.cpp  GameStatsManager.cpp  LevelBrowserLayer.cpp  LevelCell.cpp  LevelEditorLayer.cpp  LevelInfoLayer.cpp  LevelSelectLayer.cpp  MenuLayer.cpp  MyLevelsLayer.cpp  Neopointfour.cpp  PauseLayer.cpp  PlayLayer.cpp  PlayerObject.cpp  SimpleAudioEngine.cpp  UILayer.cpp  hook.hpp
src/layers/: HaxMenu.cpp  HaxOverlay.cpp
src/version/: VersionUtils.cpp  VersionUtils.hpp  constants.hpp  versions.hpp
src/version/1.0/: addresses.hpp  constants.hpp
src/version/1.1/: addresses.hpp  constants.hpp
src/version/1.2/: addresses.hpp
src/version/1.3/: addresses.hpp  constants.hpp
src/version/1.4/: addresses.hpp  constants.hpp
src/version/1.5/: addresses.hpp  constants.hpp
src/version/1.6/: addresses.hpp  constants.hpp
src/version/1.7/: constants.hpp
src/version/1.8/: constants.hpp
